--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ log/*.log
 pkg/
 test/dummy/log/*.log
 test/dummy/tmp/
+
+
+#Rubocop Report
+.rubocop_todo.yml
+
+#MakeMakeFile Output
+mkmf.log
+
+# Ignore Cucumber Re-run
+rerun.txt
