Exclude RSpec and other DSls from this rule since its not really meant for them and ruby style guide says blocks in these places are still good

--- a/lib/generators/lint_configs/templates/.rubocop.yml
+++ b/lib/generators/lint_configs/templates/.rubocop.yml
@@ -25,3 +25,10 @@ Style/TrailingBlankLines:
 
 AmbiguousBlockAssociation:
   Enabled: false
+
+# Ignore These paths when checking for block lengths since DSLs are still ok in ruby style guide
+Style/BlockLength:
+  Exclude:
+    - "Rakefile"
+    - "**/*.rake"
+    - "spec/**/*.rb"
