Increase nesting and make RSPEC specific configs clear

--- a/lib/generators/lint_configs/templates/.rubocop.yml
+++ b/lib/generators/lint_configs/templates/.rubocop.yml
@@ -25,3 +25,8 @@ Style/TrailingBlankLines:
 
 AmbiguousBlockAssociation:
   Enabled: false
+
+######################################## RSpec Specific #############################################
+
+RSpec/NestedGroups:
+  MaxNesting: 4
