MaxNesting is depricated for just Max

--- a/lib/generators/lint_configs/templates/.rubocop.yml
+++ b/lib/generators/lint_configs/templates/.rubocop.yml
@@ -29,4 +29,4 @@ AmbiguousBlockAssociation:
 ######################################## RSpec Specific #############################################
 
 RSpec/NestedGroups:
-  MaxNesting: 4
+  Max: 4
