--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ env:
 cache:
   - bundler
   - apt
-script:
+before_script:
   - cd test_app
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+script:
   - bundle exec rspec
+after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
