Add rule to prefer alias method over alias

--- a/lib/generators/lint_configs/templates/.rubocop.yml
+++ b/lib/generators/lint_configs/templates/.rubocop.yml
@@ -38,6 +38,8 @@ Metrics:
 Style/Lambda:
   EnforcedStyle: literal
 
+Style/Alias:
+  EnforcedStyle: prefer_alias_method
 
 ######################################## RSpec Specific #############################################
 
