--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -8,7 +8,7 @@ repository:
   has_projects: true
   has_wiki: true
   has_downloads: true
-  default_branch: master
+  default_branch: main
   allow_squash_merge: true
   allow_merge_commit: true
   allow_rebase_merge: true
@@ -31,7 +31,11 @@ branches:
         dismiss_stale_reviews: false
         require_code_owner_reviews: true
         dismissal_restrictions: {}
-      required_status_checks: null
+      required_status_checks:
+        strict: false
+        contexts:
+          - Travis CI - Branch
+          - Travis CI - Pull Request
       enforce_admins: false
       required_linear_history: false
       restrictions: null
